--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,7 +15,6 @@ jobs:
 
     env:
       PROJECT_DIR: FallenClient
-      REGION: us-west-2
 
     steps:
       - name: Checkout code
@@ -52,6 +51,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
+    env:
+      REGION: us-west-2
 
     steps:
       - name: Download build artifacts
