--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -69,4 +69,4 @@ jobs:
 
       - name: Deploy to AWS Amplify
         run: |
-            aws s3 cp blazor-wasm-app.zip s3://fallen-client/blazor-wasm-app.zip
+            aws s3 cp blazor-wasm-app.zip s3://fallen-client/blazor-wasm-app.zip --acl bucket-owner-full-control
