--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,6 +29,10 @@ jobs:
         run: dotnet workload install wasm-tools
         working-directory: ${{ env.PROJECT_DIR }}
 
+      - name: Add GitHub Packages to NuGet sources
+        run: |
+          dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
+
       - name: Restore dependencies
         run: dotnet restore
         working-directory: ${{ env.PROJECT_DIR }}
